Source/Alternet.UI.Pal/Api/Region.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "Region.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API Region* Region_Create_()
{
    return MarshalExceptions<Region*>([&](){
        return new Region();
    });
}

ALTERNET_UI_API void Region_Clear_(Region* obj)
{
    MarshalExceptions<void>([&](){
        obj->Clear();
    });
}

ALTERNET_UI_API int Region_ContainsPoint_(Region* obj, PointD* pt)
{
    return MarshalExceptions<int>([&](){
        return obj->ContainsPoint(*pt);
    });
}

ALTERNET_UI_API int Region_ContainsRect_(Region* obj, RectD* rect)
{
    return MarshalExceptions<int>([&](){
        return obj->ContainsRect(*rect);
    });
}

ALTERNET_UI_API c_bool Region_IsEmpty_(Region* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsEmpty();
    });
}

ALTERNET_UI_API c_bool Region_IsOk_(Region* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsOk();
    });
}

ALTERNET_UI_API void Region_InitializeWithRegion_(Region* obj, Region* region)
{
    MarshalExceptions<void>([&](){
        obj->InitializeWithRegion(region);
    });
}

ALTERNET_UI_API void Region_InitializeWithRect_(Region* obj, RectD* rect)
{
    MarshalExceptions<void>([&](){
        obj->InitializeWithRect(*rect);
    });
}

ALTERNET_UI_API void Region_InitializeWithPolygon_(Region* obj, PointD* points, int pointsCount, FillMode fillMode)
{
    MarshalExceptions<void>([&](){
        obj->InitializeWithPolygon(points, pointsCount, fillMode);
    });
}

ALTERNET_UI_API void Region_IntersectWithRect_(Region* obj, RectD* rect)
{
    MarshalExceptions<void>([&](){
        obj->IntersectWithRect(*rect);
    });
}

ALTERNET_UI_API void Region_IntersectWithRegion_(Region* obj, Region* region)
{
    MarshalExceptions<void>([&](){
        obj->IntersectWithRegion(region);
    });
}

ALTERNET_UI_API void Region_UnionWithRect_(Region* obj, RectD* rect)
{
    MarshalExceptions<void>([&](){
        obj->UnionWithRect(*rect);
    });
}

ALTERNET_UI_API void Region_UnionWithRegion_(Region* obj, Region* region)
{
    MarshalExceptions<void>([&](){
        obj->UnionWithRegion(region);
    });
}

ALTERNET_UI_API void Region_XorWithRect_(Region* obj, RectD* rect)
{
    MarshalExceptions<void>([&](){
        obj->XorWithRect(*rect);
    });
}

ALTERNET_UI_API void Region_XorWithRegion_(Region* obj, Region* region)
{
    MarshalExceptions<void>([&](){
        obj->XorWithRegion(region);
    });
}

ALTERNET_UI_API void Region_SubtractRect_(Region* obj, RectD* rect)
{
    MarshalExceptions<void>([&](){
        obj->SubtractRect(*rect);
    });
}

ALTERNET_UI_API void Region_SubtractRegion_(Region* obj, Region* region)
{
    MarshalExceptions<void>([&](){
        obj->SubtractRegion(region);
    });
}

ALTERNET_UI_API void Region_Translate_(Region* obj, float dx, float dy)
{
    MarshalExceptions<void>([&](){
        obj->Translate(dx, dy);
    });
}

ALTERNET_UI_API RectD_C Region_GetBounds_(Region* obj)
{
    return MarshalExceptions<RectD_C>([&](){
        return obj->GetBounds();
    });
}

ALTERNET_UI_API c_bool Region_IsEqualTo_(Region* obj, Region* other)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsEqualTo(other);
    });
}

ALTERNET_UI_API int Region_GetHashCode__(Region* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetHashCode_();
    });
}