Source/Alternet.UI/Native/Region.cs

// <auto-generated>This code was generated by a tool, DO NOT MODIFY MANUALLY. Copyright AlterNET, 2023.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal class Region : NativeObject
    {
        static Region()
        {
        }
        
        public Region()
        {
            SetNativePointer(NativeApi.Region_Create_());
        }
        
        public Region(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public void InitializeWithRect(Alternet.Drawing.Rect rect)
        {
            CheckDisposed();
            NativeApi.Region_InitializeWithRect_(NativePointer, rect);
        }
        
        public void InitializeWithPolygon(Alternet.Drawing.Point[] points, FillMode fillMode)
        {
            CheckDisposed();
            NativeApi.Region_InitializeWithPolygon_(NativePointer, points, points.Length, fillMode);
        }
        
        public void IntersectWithRect(Alternet.Drawing.Rect rect)
        {
            CheckDisposed();
            NativeApi.Region_IntersectWithRect_(NativePointer, rect);
        }
        
        public void IntersectWithRegion(Region region)
        {
            CheckDisposed();
            NativeApi.Region_IntersectWithRegion_(NativePointer, region.NativePointer);
        }
        
        public void UnionWithRect(Alternet.Drawing.Rect rect)
        {
            CheckDisposed();
            NativeApi.Region_UnionWithRect_(NativePointer, rect);
        }
        
        public void UnionWithRegion(Region region)
        {
            CheckDisposed();
            NativeApi.Region_UnionWithRegion_(NativePointer, region.NativePointer);
        }
        
        public void XorWithRect(Alternet.Drawing.Rect rect)
        {
            CheckDisposed();
            NativeApi.Region_XorWithRect_(NativePointer, rect);
        }
        
        public void XorWithRegion(Region region)
        {
            CheckDisposed();
            NativeApi.Region_XorWithRegion_(NativePointer, region.NativePointer);
        }
        
        public void SubtractRect(Alternet.Drawing.Rect rect)
        {
            CheckDisposed();
            NativeApi.Region_SubtractRect_(NativePointer, rect);
        }
        
        public void SubtractRegion(Region region)
        {
            CheckDisposed();
            NativeApi.Region_SubtractRegion_(NativePointer, region.NativePointer);
        }
        
        public void Translate(double dx, double dy)
        {
            CheckDisposed();
            NativeApi.Region_Translate_(NativePointer, dx, dy);
        }
        
        public Alternet.Drawing.Rect GetBounds()
        {
            CheckDisposed();
            var n = NativeApi.Region_GetBounds_(NativePointer);
            var m = n;
            return m;
        }
        
        public bool IsEqualTo(Region other)
        {
            CheckDisposed();
            var n = NativeApi.Region_IsEqualTo_(NativePointer, other.NativePointer);
            var m = n;
            return m;
        }
        
        public int GetHashCode_()
        {
            CheckDisposed();
            var n = NativeApi.Region_GetHashCode__(NativePointer);
            var m = n;
            return m;
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Region_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_InitializeWithRect_(IntPtr obj, Alternet.Drawing.Rect rect);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_InitializeWithPolygon_(IntPtr obj, Alternet.Drawing.Point[] points, int pointsCount, FillMode fillMode);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_IntersectWithRect_(IntPtr obj, Alternet.Drawing.Rect rect);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_IntersectWithRegion_(IntPtr obj, IntPtr region);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_UnionWithRect_(IntPtr obj, Alternet.Drawing.Rect rect);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_UnionWithRegion_(IntPtr obj, IntPtr region);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_XorWithRect_(IntPtr obj, Alternet.Drawing.Rect rect);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_XorWithRegion_(IntPtr obj, IntPtr region);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_SubtractRect_(IntPtr obj, Alternet.Drawing.Rect rect);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_SubtractRegion_(IntPtr obj, IntPtr region);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Region_Translate_(IntPtr obj, double dx, double dy);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.Rect Region_GetBounds_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Region_IsEqualTo_(IntPtr obj, IntPtr other);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Region_GetHashCode__(IntPtr obj);
            
        }
    }
}
